# chat-stats-2

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  app.json  eslint.config.base.mjs  eslint.config.expo.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/: mcp.json
.cursor/rules/: project-architecture.mdc
apps/chat-processor-cli/: Cargo.toml  project.json
apps/chat-processor-cli/src/: main.rs
apps/mobile-client/: .gitignore  .null.swp  app.json  babel.config.js  drizzle.config.ts  eslint.config.mjs  metro.config.js  package.json  project.json  tailwind.config.js  tsconfig.json
apps/processor-cli/: Cargo.toml  project.json
apps/processor-cli/src/: main.rs
chat-stats-documentation/: NonDestructiveMergePlan.md  Overview.md
chat-stats-documentation/.obsidian/: workspace.json
libs/chat-processor/: Cargo.toml  project.json
libs/processor/: .gitignore  Cargo.toml  build-ios.sh  build.rs  cbindgen.toml  project.json
libs/processor-bridge/: .gitignore  README.md  expo-module.config.json  package.json  project.json_bak
libs/processor/src/: lib.rs  progress.rs  zip_merged.rs
libs/processor/src/adapters/messenger/: json.rs  mod.rs
libs/processor/src/adapters/messenger/export/: mod.rs
libs/processor/src/adapters/messenger/export/e2e/: json.rs  mod.rs
libs/processor/src/adapters/messenger/export/facebook/: mod.rs
libs/processor/src/adapters/messenger/helpers/: encoding.rs  mod.rs  paths.rs
libs/processor/src/artifact/schema/: mod.rs
libs/processor/src/database/: mod.rs  schema.rs
libs/processor/src/ffi/: messenger.rs  mod.rs  progress_callbacks.rs  utilities.rs
libs/processor/src/importers/: mod.rs
libs/processor/src/importers/messenger/: mod.rs
libs/processor/src/importers/messenger/formats/: mod.rs
libs/processor/src/importers/messenger/formats/e2e/: json.rs  mod.rs
libs/processor/src/importers/messenger/formats/facebook/: json.rs  mod.rs  paths.rs
libs/processor/src/importers/messenger/utils/: db_helpers.rs  encoding.rs  file_index.rs  mod.rs
libs/processor/src/utils/: archive.rs  audio.rs  mod.rs  zip.rs
libs/processor/tests/: audio_duration.rs  audio_fixture.rs
(+138 files in other folders)
