[package]
name = "processor-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
processor = { path = "../../libs/processor" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
