[package]
name = "processor"
version = "0.1.0"
edition = "2021"


[build-dependencies]
cbindgen = "0.24.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1" 

[profile.release]
# strip = "symbols"
lto = true
opt-level = "z"
codegen-units = 1

[lib]
crate-type = ["staticlib", "rlib"]
