[package]
name = "processor"
version = "0.1.0"
edition = "2021"


[build-dependencies]
cbindgen = "0.24.0"

[dependencies]
anyhow = "1.0.99"
regex = "1.11.2"
rusqlite = { version = "0.37.0", features = ["bundled"] } 
rusqlite_migration = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1" 

[profile.release]
# strip = "symbols"
lto = true
opt-level = "z"
codegen-units = 1

[lib]
crate-type = ["staticlib", "rlib"]
